06/network.tf
resource "google_compute_network" "vpc" {
  name = var.vpc_name
  auto_create_subnetworks = false
}
